<resources>
    <string name="app_name">ThePlaceIWas</string>
    <string name="tab_text_1">Summary</string>
    <string name="tab_text_2">Calendar</string>
    <string name="dialog_edit_place">Edit place</string>
    <string name="dialog_new_place">New place</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_delete">DELETE</string>
    <string name="dialog_no_provider">No location provider enabled</string>
    <string name="dialog_enable_service">You must enable location service to create here as a new place</string>
    <string name="dialog_no_location_found">No location found</string>
    <string name="dialog_unable_to_provide_location">Location provider was unable to provide a location. Please try again !</string>
    <string name="dialog_delete_place">Delete place</string>
    <string name="dialog_delete_alert">"Are you sure you want to delete : "</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_clear_data">Clear data</string>
    <string name="dialog_enter_date">Enter the date until when you want to clear data</string>
    <string name="no_filter">No filter</string>
    <string name="none_of_them">None of them</string>
    <string name="at_least_one_of_them">At least one of them</string>
    <string name="all_of_them">All of them</string>
    <string name="number_of_days">NUMBER OF DAYS</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add_here_as_a_new_place">Add here as a new place</string>
    <string name="place">Place</string>
    <string name="days_at">Days at place</string>
    <string name="cal">Cal.</string>
    <string name="nowhere_known">Nowhere known</string>
    <string name="name">Name :</string>
    <string name="accuracy">Accuracy :</string>
    <string name="export_data">Export data</string>
    <string name="import_data">Import data</string>
    <string name="clear_data">Clear data</string>
</resources>